--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,29 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Trakk</title>
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyDb9XNI6SO2Y2NFMTk_SsEjojrnHkr-M84",
+        authDomain: "trakk-5aae9.firebaseapp.com",
+        projectId: "trakk-5aae9",
+        storageBucket: "trakk-5aae9.appspot.com",
+        messagingSenderId: "71354034012",
+        appId: "1:71354034012:web:bbc0dbe8579230aa3c8399",
+        measurementId: "G-QHTX9ZYP6T",
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
